app/javascript/flavours/glitch/styles/mastodon/components.scss
/* ... */
.notification-group {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  padding: 10px 14px; // glitch: reduced padding
  border-bottom: 1px solid var(--color-border-primary);

  &__icon {
    width: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 0 0 auto;
    color: var(--color-text-tertiary);

    .icon {
      width: 28px;
      height: 28px;
    }
  }

  &--follow &__icon,
  &--follow-request &__icon {
    color: var(--color-text-brand);
  }

  &--favourite &__icon {
    color: var(--color-text-favourite-highlight);
  }

  &--reaction &__icon {
    color: $blurple-300;
  }

  &--reblog &__icon {
    color: var(--color-text-success);
  }

  &--relationships-severance-event &__icon,
  &--admin-report &__icon,
  &--admin-sign-up &__icon {
    color: var(--color-text-tertiary);
  }

  &--moderation-warning &__icon {
    color: var(--color-text-bookmark-highlight);
  }

  &--follow-request &__actions {
    align-items: center;
    display: flex;
    gap: 8px;

    .icon-button {
      border: 1px solid var(--color-border-primary);
      border-radius: 50%;
      padding: 1px;
    }
  }

  &__main {
    display: flex;
    flex-direction: column;
    gap: 8px;
    flex: 1 1 auto;
    overflow: hidden;
    container-type: inline-size;

    &__header {
      display: flex;
      flex-direction: column;
      gap: 8px;

      &__wrapper {
        display: flex;
        justify-content: space-between;
      }

      &__label {
        display: flex;
        flex-wrap: wrap;
        gap: 2px 8px;
        font-size: 15px;
        line-height: 22px;
        color: var(--color-text-secondary);

        a {
          color: inherit;
          text-decoration: none;
        }

        bdi {
          font-weight: 700;
          color: var(--color-text-primary);
        }

        time {
          color: var(--color-text-tertiary);
        }

        @container (width < 350px) {
          time,
          &-separator {
            display: none;
          }
        }
      }
    }

    &__status {
      border: 1px solid var(--color-border-primary);
      border-radius: 8px;
      padding: 8px;
    }

    &__additional-content {
      color: var(--color-text-tertiary);
      margin-top: -8px; // to offset the parent's `gap` property
      font-size: 15px;
      line-height: 22px;
    }
  }

  .status {
    padding: 0;
    border: 0;
  }

  &__embedded-status {
    display: flex;
    flex-direction: column;
    gap: 8px;
    cursor: pointer;

    &__account {
      display: flex;
      align-items: center;
      gap: 4px;
      color: var(--color-text-tertiary);
      font-size: 15px;
      line-height: 22px;

      bdi {
        color: var(--color-text-secondary);
      }

      .account__avatar {
        flex: 0 0 auto;
      }
    }

    /* glitch: used for CWs */
    p {
      font-size: 15px;
      color: var(--color-text-secondary);
    }

    &__content {
      display: -webkit-box;
      font-size: 15px;
      line-height: 22px;
      color: var(--color-text-secondary);
      -webkit-line-clamp: 4;
      line-clamp: 4;
      -webkit-box-orient: vertical;
      max-height: none;
      overflow: hidden;

      p,
      a {
        color: inherit;
      }

      p {
        margin-bottom: 8px;
      }
    }

    .reply-indicator__attachments {
      margin-top: 0;
      font-size: 15px;
      line-height: 22px;
      color: var(--color-text-tertiary);
    }
  }
}

.notification-group__actions,
.compose-form__actions {
  .button {
    display: block; // Otherwise text-ellipsis doesn't work
    flex: 1 1 auto;
  }
}

.notification-ungrouped {
  padding: 10px 14px; // glitch: reduced padding
  border-bottom: 1px solid var(--color-border-primary);

  &__header {
    display: flex;
    align-items: center;
    gap: 8px;
    color: var(--color-text-tertiary);
    font-size: 15px;
    line-height: 22px;
    font-weight: 500;
    padding-inline-start: 24px;
    margin-bottom: 16px;

    &__icon {
      display: flex;
      align-items: center;
      justify-content: center;
      flex: 0 0 auto;

      .icon {
        width: 16px;
        height: 16px;
      }
    }

    a {
      color: inherit;
      text-decoration: none;
    }
  }

  .status:not(.status--is-quote) {
    border: 0;
    padding: 0;
  }

  .status__wrapper-direct {
    background: transparent;
  }

  .status {
    // 40px avatar + 8px gap
    --status-gutter-width: 48px;
  }

  .status--is-quote {
    --status-gutter-width: 0;
  }

  .status__content,
  .status__action-bar,
  .media-gallery,
  .video-player,
  .audio-player,
  .attachment-list,
  .picture-in-picture-placeholder,
  .more-from-author,
  .status-card,
  .hashtag-bar,
  .content-warning,
  .filter-warning {
    margin-inline-start: var(--status-gutter-width);
    width: calc(100% - var(--status-gutter-width));
  }

  .more-from-author {
    width: calc(100% - var(--status-gutter-width) + 2px);
  }

  .status__content__read-more-button {
    margin-inline-start: var(--status-gutter-width);
  }

  .notification__report {
    border: 0;
    padding: 0;
  }
}

.notification-group--unread,
.notification-ungrouped--unread {
  position: relative;

  &::before {
    content: '';
    position: absolute;
    top: 0;
    inset-inline-start: 0;
    width: 100%;
    height: 100%;
    border-inline-start: 4px solid var(--color-text-brand);
    pointer-events: none;
  }
}

.hover-card-controller[data-popper-reference-hidden='true'] {
  opacity: 0;
  pointer-events: none;
}
/* ... */

